--- a/css/theme.css
+++ b/css/theme.css
@@ -32,9 +32,8 @@ h1{
 header {
   min-width: 500px;
   height: 100vh;
-  background-image: url('../assets/sail_l.jpg');
-  background-position: center;
-  background-size: cover;
+  background: linear-gradient(rgba(243, 105, 7, 0.5),rgba(2, 53, 130, 0.75)),
+              url(../assets/sail_l.jpg) no-repeat center center
 }
 
 .center {
